feat: add flight control system